# Memory

./: .env.example  .envrc  .gitignore  README.md  flake.nix  main.py  pyproject.toml
doc/: general.md  postgres.txt
notebooks/: explorations.ipynb
sql/: cleanup.sql  init_tables.sql  setup_db.py
src/: api.py
src/routers/: dependencies.py  get_items.py  ingest.py  retrieve.py  task_status.py
src/services/: embedding.py  image_analysis.py  media_analysis.py  rerank.py
src/uri_handler/: parser.py  split_text.py  task_queue.py
src/utils/: config.py  database.py  embedding.py  models.py  reranking.py
