[project]
name = "memory"
version = "0.1.0"
description = "Memory System - A backend service for ingesting, storing, and retrieving event logs"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.0.0",
    "pgvector>=0.2.0",
    "numpy<2",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "librosa>=0.11.0",
    "transformers>=4.51.0",
    "sentence-transformers>=2.7.0",
    "torch>=2.8.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "notebook>=7.4.4",
]

[[tool.uv.index]]
name = "jetson-jp6-cu126"
url = "https://pypi.jetson-ai-lab.io/jp6/cu126/+simple"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]
ignore = ["E501"]
unfixable = ["B"]
