[project]
name = "memory"
version = "0.1.0"
description = "Memory System - A backend service for ingesting, storing, and retrieving event logs"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.0.0",
    "pgvector>=0.2.0",
    "numpy<2",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "librosa>=0.11.0",
    "transformers>=4.51.0",
    "sentence-transformers>=2.7.0",
    "torch>=2.8.0",
    "loguru>=0.7.3",
    "ninja>=1.11.1.4",
    "triton>=3.4.0",
    "accelerate>=1.9.0",
    "pillow>=10.0.0",
    "timm>=1.0.17",
    "flash-attn>=2.8.1",
    "torchvision>0.21",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = ["ipywidgets>=8.1.7", "mypy>=1.17.0", "notebook>=7.4.4"]

[[tool.uv.index]]
name = "jetson-jp6-cu126"
url = "https://pypi.jetson-ai-lab.io/jp6/cu126/+simple"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]
ignore = ["E501"]
unfixable = ["B"]
per-file-ignores = { "src/api.py" = ["B008"], "src/routers/*" = ["B008"] }
